fixed:overflow-x issue on website

--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
 
 }
 
+
+html{
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
 html,body{
   width: 100%;
   height: 100%;
